more alignment fixes for speakers grid

--- a/src/styles/_angular-material.scss
+++ b/src/styles/_angular-material.scss
@@ -26,3 +26,8 @@
     line-height: 14px;
     color: grey;
 }
+
+md-card {
+	height: 100%;
+	width: 100%;
+}
